RESOLVED FIXED49664
[Qt] [WK2] WebKit 2 would not compile for Qt without ENABLE_TOUCH_EVENT
https://bugs.webkit.org/show_bug.cgi?id=49664
Summary [Qt] [WK2] WebKit 2 would not compile for Qt without ENABLE_TOUCH_EVENT
Benjamin Poulain
Reported 2010-11-17 07:17:00 PST
The #defines for ENABLE_TOUCH_EVENT seem a bit chaotic. It looks like the library would not compile.
Attachments
Patch (1.94 KB, patch)
2010-11-17 07:54 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-11-17 07:54:51 PST
Laszlo Gombos
Comment 2 2010-11-17 08:37:49 PST
Comment on attachment 74114 [details] Patch LGTM, r+. Laszlo
WebKit Commit Bot
Comment 3 2010-11-18 01:05:47 PST
The commit-queue encountered the following flaky tests while processing attachment 74114 [details]: fast/loader/recursive-before-unload-crash.html fast/dom/onerror-img.html Please file bugs against the tests. These tests were authored by beidson@apple.com and eric@webkit.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-18 06:34:21 PST
Comment on attachment 74114 [details] Patch Rejecting patch 74114 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 2 Last 500 characters of output: itBuild/Debug/WebProcess.app /Projects/CommitQueue/WebKitBuild/Debug/WebKit2.framework ** BUILD FAILED ** The following build commands failed: WebKit2: CompileC /Projects/CommitQueue/WebKitBuild/WebKit2.build/Debug/WebKit2.build/Objects-normal/x86_64/WebKeyboardEvent.o /Projects/CommitQueue/WebKit2/Shared/WebKeyboardEvent.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 (1 failure) Use of uninitialized value $_[0] in join or string at /System/Library/Perl/5.10.0/File/Spec/Unix.pm line 81. Full output: http://queues.webkit.org/results/6178063
Benjamin Poulain
Comment 5 2010-11-18 07:11:22 PST
Comment on attachment 74114 [details] Patch cq+, this patch has nothing to do with the build failure on Mac.
WebKit Commit Bot
Comment 6 2010-11-18 10:09:26 PST
Comment on attachment 74114 [details] Patch Clearing flags on attachment: 74114 Committed r72305: <http://trac.webkit.org/changeset/72305>
WebKit Commit Bot
Comment 7 2010-11-18 10:09:31 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2010-11-18 11:49:33 PST
Odd. I'm not sure how the cq got confused like that. It should have tried to build again and failed and then not commented. I've not seen it have a false-positive build failure in a long long time.
Note You need to log in before you can comment on or make changes to this bug.