WebKit2/UIProcess/API/qt/qgraphicswkview.cpp
@@ -305,12 +305,10 @@ void QGraphicsWKView::wheelEvent(QGraphicsSceneWheelEvent* ev)
         QGraphicsItem::wheelEvent(ev);
 }
 
-#if ENABLE(TOUCH_EVENTS)
 void QGraphicsWKView::touchEvent(QTouchEvent* ev)
 {
     page()->d->touchEvent(ev);
 }
-#endif
 
 void QGraphicsWKView::focusInEvent(QFocusEvent*)
 {
