WebKit2/UIProcess/API/qt/qwkpage.cpp
@@ -295,8 +295,12 @@ void QWKPagePrivate::_q_webActionTriggered(bool checked)
 
 void QWKPagePrivate::touchEvent(QTouchEvent* event)
 {
+#if ENABLE(TOUCH_EVENTS)
     WebTouchEvent touchEvent = WebEventFactory::createWebTouchEvent(event);
     page->handleTouchEvent(touchEvent);
+#else
+    event->ignore();
+#endif
 }
 
 QWKPage::QWKPage(WKPageNamespaceRef namespaceRef)
